Bug 1400315- Fix padding and remove center alignment for empty downloads in downloads dropdown; r=sfoster
MozReview-Commit-ID: 9c5Bp9V9Nl3
***
Bug 1400315- Fix padding and remove center alignment for empty downloads in downloads dropdown; r=sfoster

UltraBlame original commit: b9da19e46c61f9b118ce244b6d45712ae40d480a

--- a/browser/themes/shared/downloads/downloads.inc.css
+++ b/browser/themes/shared/downloads/downloads.inc.css
@@ -26,11 +26,8 @@
 }
 
 #emptyDownloads {
-  padding: 16px 25px;
+  padding: 16px 16px;
   margin: 0;
-  
-
-  text-align: center;
 }
 
 .downloadsPanelFooter {
